services/ui-src/src/index.scss
/* ... */
.vert-line-svg {
  position: absolute;
  left: 6.17%;
  right: 92.58%;
  top: 25.47%;
  bottom: 74.38%;

  background: #0071bc;
  transform: rotate(-90deg);
}

.submission-form-cancel-button {
  @extend .ds-c-button;
  @extend .ds-c-button--transparent;
  font-family: Open Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 21px;
  /* identical to box height, or 130% */

  text-align: center;
  text-decoration-line: underline;

  color: $color-primary;
}

.group-division-selection {
  @extend .ds-u-margin-y--5;
  @extend .ds-u-margin-x--auto;

  max-width: 560px;

  .ds-c-label,
  .submit-buttons {
    @extend .ds-u-margin-top--5;
    @extend .ds-u-margin-bottom--1;

    button:not(:last-child) {
      margin-right: 1ch;
    }
  }
}

.group-division-option-abbr {
  display: inline-block;
  min-width: 8ch;
}

.choice-container {
  @extend .form-container;
  @extend .ds-u-padding-bottom--7;
  @extend .ds-u-margin-x--auto;
  @extend .ds-u-align-items--stretch;
  max-width: 800px;

  .gradient-box {
    height: 8px;
    border: 0;
    border-radius: 3px 3px 0 0;
    background: linear-gradient(90.11deg, #0071bc 49.91%, #02bfe7 66.06%);
  }

  &.file-list-container {
    @extend .ds-u-margin--0;
    @extend .ds-u-padding--0;
    align-self: flex-start;
    max-width: initial !important;

    .choice-intro {
      @extend .ds-u-margin-bottom--2;
      @extend .ds-u-padding-bottom--0;
      // Possibly unnecessary? Can't find a use for this since this class is only
      // applied to a list title.
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    .choice-info {
      @extend .ds-u-margin-bottom--2;
    }

    .file-list-dl-button {
      @extend .ds-u-margin-bottom--2;
      align-self: flex-end;
    }
  }

  label {
    width: 100%;
  }
}

.choice-intro {
  @extend .ds-u-padding-bottom--1;
  font-family: Open Sans;
  font-size: 21px;
  font-style: normal;
  font-weight: 700;
  line-height: 28px;
  letter-spacing: 0px;
  text-align: left;
  color: #212121;
}

.choice-list {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0px;
  box-sizing: border-box;
  color: $color-primary;
  background: #fff;
  background-clip: padding-box;
  border-bottom: 1px solid #d6d7d9;
  border-left: 1px solid #d6d7d9;
  border-right: 1px solid #d6d7d9;
  border-radius: 0 0 3px 3px;
  label {
    max-width: 100%;
    list-style-type: none;
    margin: 0px;
    min-height: 110px;
    p {
      color: #5b616b;
      font-size: 16px;
      font-weight: 600;
    }
    a {
      @extend .ds-u-padding--3;
      text-decoration: none;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
  }
  label:nth-child(even) {
    background-color: rgba(196, 196, 196, 0.1);
  }
  label:hover {
    background-color: #f0fafe;
  }

  label.choice-list-item {
    @extend .ds-u-padding--3;
    color: $color-base;

    h3 {
      @extend .ds-u-margin-top--0;
      @extend .ds-u-margin-bottom--2;
    }

    a {
      @extend .ds-u-padding--0;
      @extend .ds-u-font-weight--bold;
      display: inline;
    }
  }
}

.choice-item-arrow {
  background: inherit;
  border: none;
  color: $color-primary;
  font-size: 24px;

  &:hover {
    text-decoration: none;
    color: $color-primary-darker;
  }
}

.cms-group-division-section {
  @extend .ds-u-border-left--1;
  @extend .ds-u-border-right--1;
  @extend .ds-u-padding--3;

  &:nth-child(even) {
    background: rgba(196, 196, 196, 0.1);
  }

  &:last-child {
    @extend .ds-u-border-bottom--1;
    border-radius: 0px 0px 3px 3px;
  }
}

.confirmation-dialog {
  .ds-c-dialog__close {
    display: none;
  }
}

.popup-menu-button:disabled {
  background-color: transparent;
  color: change-color($color-gray, $alpha: 0.3);
}

.attachment-redirect-wrapper {
  @extend .app-bar;
  @extend .ds-u-padding-top--3;
  @extend .ds-u-display--flex;
  @extend .ds-u-justify-content--around;

  .attachment-redirect {
    width: 100%;
    @include max-width-ultra-wide;

    > * {
      @extend .ds-u-measure--wide;
    }

    > ol {
      padding-left: 2ch;
    }

    aside {
      @extend .ds-u-margin--2;
      @extend .ds-u-padding--1;
      @extend .ds-u-border--1;
      @extend .ds-u-radius;
    }
  }
}

.picker-wrapper {
  position: relative;
}

.picker-button {
  display: flex;
  gap: 4px;
  white-space: nowrap;
}

.dropdown-column-picker-box {
  @extend .ds-u-align-items--center;
  background-color: $color-white;
  border: 1px solid #0071bc;
  min-width: 160px;
  position: absolute;
  padding: 12px 15px;
  top: 33px;
  width: 100%;
  z-index: 3;
  border-radius: 3px;
  border-top: none;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}
/* ... */

